--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,10 +8,20 @@ pipeline {
                 echo 'Building..'
             }
         }
+        stage('Deploy'){
+        steps{
+        echo 'Deploying'
+            }
+        }
         stage('Test') {
             steps {
                 echo 'Testing..'
             }
         }
+        stage('Release'){
+        steps{
+echo 'Release'
+}
+    }
     }
 }
